--- a/Practika/Practika/MainWindow.xaml
+++ b/Practika/Practika/MainWindow.xaml
@@ -47,7 +47,7 @@
         </Style>
     </Window.Resources>
     <Grid>
-        <StackPanel Orientation="Vertical" Style="{StaticResource MainStyle}" Visibility="Hidden">
+        <StackPanel Orientation="Vertical" Style="{StaticResource MainStyle}" Name="signInForm" Visibility="Hidden">
             <Image Source="resources/images/logo.png" Width="200"></Image>
             <TextBlock Style="{StaticResource ElementsStyle}" TextAlignment="Center">Логин</TextBlock>
             <TextBox Style="{StaticResource ElementsStyle}" Foreground="#546e7a"></TextBox>
@@ -55,11 +55,11 @@
             <PasswordBox Style="{StaticResource ElementsStyle}" Foreground="#546e7a"></PasswordBox>
             
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
-                <Button Style="{StaticResource ElementsStyle}" FontSize="15" Height="40" Margin="0 20 10 0">Регистрация</Button>
-                <Button Style="{StaticResource ElementsStyle}" FontSize="15" Height="40" Margin="10 20 0 0">Вход</Button>
+                <Button Style="{StaticResource ElementsStyle}" FontSize="15" Height="40" Margin="0 20 10 0" Click="register_Click">Регистрация</Button>
+                <Button Style="{StaticResource ElementsStyle}" FontSize="15" Height="40" Margin="10 20 0 0" Click="mainWindow_Click">Вход</Button>
             </StackPanel>
         </StackPanel>
-        <Grid Visibility="Hidden">
+        <Grid Visibility="Hidden" x:Name="registerForm">
             <Grid.RowDefinitions>
                 <RowDefinition Height="450"></RowDefinition>
                 <RowDefinition></RowDefinition>
@@ -94,7 +94,11 @@
             </Grid>
             <Image HorizontalAlignment="Left" Width="150" Grid.Row="5" Source="resources/images/logo.png"></Image>
         </Grid>
-        <DockPanel>
+        <DockPanel x:Name="mainWindowMenegerForm">
+            <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
+                <Image Grid.Row="3" HorizontalAlignment="Left" Width="150" Source="resources/images/logo.png"></Image>
+                <TextBlock Style="{StaticResource mainWindowStyle}" FontSize="36" TextAlignment="Center" Margin="50 0 0 0" FontWeight="Bold">Рабочая область</TextBlock>
+            </StackPanel>
             <Grid DockPanel.Dock="Right" Width="200">
                 <Grid.RowDefinitions>
                     <RowDefinition></RowDefinition>
@@ -113,17 +117,25 @@
                 <Border  BorderThickness="2" BorderBrush="#37474f" Grid.ColumnSpan="2" Grid.RowSpan="8"></Border>
                 <TextBlock Style="{StaticResource mainWindowStyle}" Grid.ColumnSpan="2">Коэффициенты</TextBlock>
                 <TextBlock  Grid.Row="1" Style="{StaticResource mainWindowStyle}">Анализ и проектирование</TextBlock>
+                <TextBox Grid.Row="1" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24"></TextBox>
                 <TextBlock Grid.Row="2" Style="{StaticResource mainWindowStyle}">Установка оборудования</TextBlock>
+                <TextBox Grid.Row="2" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24"></TextBox>
                 <TextBlock Grid.Row="3" Style="{StaticResource mainWindowStyle}">Техническое обслуживание и сопровождение</TextBlock>
+                <TextBox Grid.Row="3" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24"></TextBox>
                 <TextBlock Grid.Row="4" Style="{StaticResource mainWindowStyle}">Коэффициент времени</TextBlock>
+                <TextBox Grid.Row="4" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24"></TextBox>
                 <TextBlock Grid.Row="5" Style="{StaticResource mainWindowStyle}">Коэффициент сложности</TextBlock>
+                <TextBox Grid.Row="5" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24"></TextBox>
                 <TextBlock Grid.Row="6" Style="{StaticResource mainWindowStyle}">Коэффициент перевода в денежный эквивалент</TextBlock>
+                <TextBox Grid.Row="6" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24"></TextBox>
                 <Button Grid.Row="7" Grid.ColumnSpan="2" Style="{StaticResource mainWindowStyle}">Изменить</Button>
             </Grid>
-            <Grid>
+            <Grid Margin="0 10 0 0">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="24"></RowDefinition>
+                    <RowDefinition Height="48"></RowDefinition>
                     <RowDefinition></RowDefinition>
+                    <RowDefinition Height="60"></RowDefinition>
                 </Grid.RowDefinitions>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition></ColumnDefinition>
@@ -134,10 +146,10 @@
                     <ColumnDefinition></ColumnDefinition>
                 </Grid.ColumnDefinitions>
                 <StackPanel Orientation="Horizontal" Grid.ColumnSpan="6">
-                    <Button Style="{StaticResource functionPanel}">Добавить исполнителя</Button>
-                    <Button Style="{StaticResource functionPanel}">Изменить исполнителя</Button>
-                    <Button Style="{StaticResource functionPanel}">Удалить проект</Button>
-                    <Button Style="{StaticResource functionPanel}">Рассчитать доход проекта</Button>
+                    <Button Style="{StaticResource functionPanel}">Добавить</Button>
+                    <Button Style="{StaticResource functionPanel}">Изменить</Button>
+                    <Button Style="{StaticResource functionPanel}">Удалить</Button>
+                    <Button Style="{StaticResource functionPanel}">Рассчитать доход</Button>
                 </StackPanel>
                 <TextBlock Grid.Row="1" Style="{StaticResource mainWindowStyle}">Исполнитель</TextBlock>
                 <TextBlock Grid.Column="1" Grid.Row="1" Style="{StaticResource mainWindowStyle}">Заголовок</TextBlock>
