--- a/Practika/Practika/MainWindow.xaml
+++ b/Practika/Practika/MainWindow.xaml
@@ -47,12 +47,12 @@
         </Style>
     </Window.Resources>
     <Grid>
-        <StackPanel Orientation="Vertical" Style="{StaticResource MainStyle}" Name="signInForm" Visibility="Hidden">
+        <StackPanel Orientation="Vertical" Style="{StaticResource MainStyle}" Name="signInForm">
             <Image Source="resources/images/logo.png" Width="200"></Image>
             <TextBlock Style="{StaticResource ElementsStyle}" TextAlignment="Center">Логин</TextBlock>
-            <TextBox Style="{StaticResource ElementsStyle}" Foreground="#546e7a"></TextBox>
+            <TextBox x:Name="loginSignIn" Style="{StaticResource ElementsStyle}" Foreground="#546e7a"></TextBox>
             <TextBlock Style="{StaticResource ElementsStyle}">Пароль</TextBlock>
-            <PasswordBox Style="{StaticResource ElementsStyle}" Foreground="#546e7a"></PasswordBox>
+            <PasswordBox Style="{StaticResource ElementsStyle}" Foreground="#546e7a" x:Name="passwordSignIn"></PasswordBox>
             
             <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
                 <Button Style="{StaticResource ElementsStyle}" FontSize="15" Height="40" Margin="0 20 10 0" Click="register_Click">Регистрация</Button>
@@ -94,7 +94,7 @@
             </Grid>
             <Image HorizontalAlignment="Left" Width="150" Grid.Row="5" Source="resources/images/logo.png"></Image>
         </Grid>
-        <DockPanel x:Name="mainWindowMenegerForm">
+        <DockPanel x:Name="mainWindowMenegerForm" Visibility="Hidden">
             <StackPanel DockPanel.Dock="Top" Orientation="Horizontal">
                 <Image Grid.Row="3" HorizontalAlignment="Left" Width="150" Source="resources/images/logo.png"></Image>
                 <TextBlock Style="{StaticResource mainWindowStyle}" FontSize="36" TextAlignment="Center" Margin="50 0 0 0" FontWeight="Bold">Рабочая область</TextBlock>
@@ -117,18 +117,18 @@
                 <Border  BorderThickness="2" BorderBrush="#37474f" Grid.ColumnSpan="2" Grid.RowSpan="8"></Border>
                 <TextBlock Style="{StaticResource mainWindowStyle}" Grid.ColumnSpan="2">Коэффициенты</TextBlock>
                 <TextBlock  Grid.Row="1" Style="{StaticResource mainWindowStyle}">Анализ и проектирование</TextBlock>
-                <TextBox Grid.Row="1" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24"></TextBox>
+                <TextBox Grid.Row="1" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24" x:Name="coefAnalys"></TextBox>
                 <TextBlock Grid.Row="2" Style="{StaticResource mainWindowStyle}">Установка оборудования</TextBlock>
-                <TextBox Grid.Row="2" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24"></TextBox>
+                <TextBox Grid.Row="2" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24" x:Name="coefSetup"></TextBox>
                 <TextBlock Grid.Row="3" Style="{StaticResource mainWindowStyle}">Техническое обслуживание и сопровождение</TextBlock>
-                <TextBox Grid.Row="3" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24"></TextBox>
+                <TextBox Grid.Row="3" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24" x:Name="coefService"></TextBox>
                 <TextBlock Grid.Row="4" Style="{StaticResource mainWindowStyle}">Коэффициент времени</TextBlock>
-                <TextBox Grid.Row="4" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24"></TextBox>
+                <TextBox Grid.Row="4" Grid.Column="1" Style="{StaticResource mainWindowStyle}" x:Name="coefTime" Height="24"></TextBox>
                 <TextBlock Grid.Row="5" Style="{StaticResource mainWindowStyle}">Коэффициент сложности</TextBlock>
-                <TextBox Grid.Row="5" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24"></TextBox>
+                <TextBox Grid.Row="5" Grid.Column="1" Style="{StaticResource mainWindowStyle}" x:Name="coefDiff" Height="24"></TextBox>
                 <TextBlock Grid.Row="6" Style="{StaticResource mainWindowStyle}">Коэффициент перевода в денежный эквивалент</TextBlock>
-                <TextBox Grid.Row="6" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24"></TextBox>
-                <Button Grid.Row="7" Grid.ColumnSpan="2" Style="{StaticResource mainWindowStyle}">Изменить</Button>
+                <TextBox Grid.Row="6" Grid.Column="1" Style="{StaticResource mainWindowStyle}" Height="24" x:Name="coefMoney"></TextBox>
+                <Button Grid.Row="7" Grid.ColumnSpan="2" Style="{StaticResource mainWindowStyle}" Click="coefChange_Click">Изменить</Button>
             </Grid>
             <Grid Margin="0 10 0 0">
                 <Grid.RowDefinitions>
